--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mobile Graphics Designer | Your Name</title>
+	<title>Mobile Graphics Designer | Enahoro Handsome</title>
 	<style>
 		/* Reset Styles */
 		* {
